<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:srcCompat="@drawable/weather" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/city_view"
        android:text="@string/city"
        android:textSize="35sp"
        android:textColor="#060505"/>

    <TextView
        android:id="@+id/main_view"
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="128dp"
        android:layout_marginStart="29dp"
        android:text="@string/main"
        android:textColor="#060505"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/description_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="196dp"
        android:text="@string/description"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/temperature_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="129dp"
        android:text="@string/temperature"
        android:textSize="50sp"
        android:textColor="#180000"/>

    <TextView
        android:id="@+id/humidity_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/main_view"
        android:layout_toEndOf="@+id/temperature_view"
        android:text="@string/humidity"
        android:textColor="#060505"
        android:textSize="20sp" />

</RelativeLayout>